# ThreatLens

./: .dockerignore  .gitignore  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: benchmark_results.md  evaluation.md
rules/: default_rules.yaml
rules/sigma_starter/: README.md
rules/sigma_starter/linux/: credential_access_sudo_etc_shadow.yml  initial_access_ssh_brute.yml
rules/sigma_starter/windows/: credential_access_dcsync.yml  credential_access_lsass_dump.yml  credential_access_mimikatz_cli.yml  credential_access_sam_hive.yml  defense_evasion_disable_defender.yml  defense_evasion_log_clear.yml  discovery_recon_burst.yml  execution_certutil_download.yml  execution_encoded_powershell.yml  execution_mshta_remote.yml  execution_rundll32_no_args.yml  initial_access_external_rdp.yml  kerberos_tgs_rc4.yml  lateral_movement_psexec.yml  persistence_new_service.yml  persistence_run_key.yml  persistence_scheduled_task.yml  privilege_escalation_sedebug.yml
sample_data/: large_synthetic.json  mixed_enterprise_log.json  sample_security_log.cef  sample_security_log.json  sample_security_log.syslog
scripts/: benchmark.py  demo.ps1  demo.sh  evaluate_evtx_attack_samples.py  generate_sample_data.py  generate_sbom.py
tests/: conftest.py  test_bugfixes_2026_04_24.py  test_cli.py  test_detections.py  test_detectors_extended.py  test_evtx_parser.py  test_follow.py  test_integration.py  test_new_features.py  test_outputs.py  test_parsers.py  test_property.py  test_report.py  test_rules.py  test_utils.py  test_v23_features.py
tests/sigma_samples/: linux_priv_esc_sudo.yml  win_certutil_download.yml  win_cred_sam_dump.yml  win_defense_evasion_disable_defender.yml  win_lateral_psexec.yml  win_persistence_schtask.yml  win_susp_powershell_enc.yml
threatlens/: __init__.py  __main__.py  allowlist.py  cli.py  config.py  dashboard.py  follower.py  models.py  report.py  scanner.py  utils.py
threatlens/detections/: __init__.py  attack_chain.py  base.py  brute_force.py  credential_access.py  defense_evasion.py  discovery.py  dns_exfiltration.py  exfiltration.py  initial_access.py  kerberos_attacks.py  lateral_movement.py  network_anomaly.py  persistence.py  privilege_escalation.py  suspicious_process.py
threatlens/enrichment/: __init__.py  geoip.py
threatlens/outputs/: __init__.py  elasticsearch.py  html_report.py  markdown.py  navigator.py  sarif.py  splunk.py  stix.py  timeline.py  wazuh.py
threatlens/parsers/: __init__.py  cef_parser.py  evtx_parser.py  json_parser.py  syslog_parser.py
threatlens/rules/: __init__.py  sigma_loader.py  yaml_rules.py
